--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,6 +15,7 @@ header {
     margin-bottom: 2em;
     justify-content:space-between;
     background-color: #0d1117;
+    box-shadow: rgba(71, 71, 71, 0.32) 0px 0.5px 4px;
 }
 
 
