--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -11,6 +11,7 @@
     border-right: 3px solid;
     font-family: monospace;
     font-size: 2em;
+    color: white;
 }
   
 @keyframes typing {
@@ -24,3 +25,13 @@
         border-color: transparent
     }
 }
+
+.res {
+    color: white;
+    word-wrap: break-word;
+    width: 450px; 
+}
+
+.animate__animated.animate__fadeIn {
+    --animate-duration: 1.5s;
+  }
