--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,8 +1,16 @@
 
 .banner {
-    margin-left: 10em;
-    margin-top: 10em;
+    max-width: 75%;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    height: 100%;
+    background-image: url();
 }
+
+.comps {
+    padding-top: 8em;
+}
+
 .typer {
     width: 18ch;
     animation: typing 2s , blink .5s step-end infinite alternate;
@@ -10,7 +18,7 @@
     overflow: hidden;
     border-right: 3px solid;
     font-family: monospace;
-    font-size: 2em;
+    font-size: 72px;
     color: white;
 }
   
@@ -29,9 +37,37 @@
 .res {
     color: white;
     word-wrap: break-word;
-    width: 450px; 
+    width: 700px; 
 }
 
-.animate__animated.animate__fadeIn {
+.animate__animated.animate__fadeIn, .animate__animated.animate__bounceIn {
     --animate-duration: 1.5s;
-  }
+}
+
+.work {
+    margin-top: 1em;
+    background: none;
+    color: aquamarine;
+    border: 2px solid aquamarine;
+    padding: 8px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.socials li {
+    margin-top: 2em;
+    margin-right: 2em;
+    color: white;
+}
+
+.fix {
+    width: 100%;
+}
+
+.socials {
+    fill: white;
+
+}
+.clr img {
+    fill: white;
+}
