--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,8 +8,9 @@ ul {
 }
 
 .fix2 {
+    height: 8%;
     width: 100%;
-    box-shadow: rgba(71, 71, 71, 0.32) 0px 0px 4px;
+    border-bottom: #5c5c5c0f 2px solid;
 }
 header {
     max-width: 75%;
@@ -17,10 +18,10 @@ header {
     margin-right: 12.5%;
     text-align: center;
     align-items: center;
+    height: 100%;
     display: flex;
-    height: 4.5em;
     justify-content:space-between;
-    background-color: #0d1117;
+    background-color: #111013;
 }
 
 
