--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -19,11 +19,6 @@
     font-weight: bold;
 }
 
-.sum {
-    word-wrap: break-word;
-    width: 700px;
-}
-
 .filters button {
     margin-right: 1em;
     background: none;
@@ -34,8 +29,37 @@
     border-radius: 22px;
     font-weight: bold;
     overflow: hidden;
+    transition: transform .2s;
+}
+
+.tags {
+    background: none;
+    border: none;
+    padding: 6px;
+    font-weight: bold;
+    font-size: 12px;
+    border-radius: 22px;
+    background-color: rgb(77, 76, 76);
+    color: white;
+}
+
+.filters button:hover {
+    transform: scale(1.02);
 }
 
 button.on {
     background-color: rgb(17, 138, 185);
+    box-shadow: rgba(0, 0, 0, 0.42) 0px 0.5px 4px;
+}
+
+.frame {
+    transition: transform .2s;
+}
+.frame:hover {
+    transform: scale(1.02);
+}
+
+.frame img {
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 0.5px 4px;
+    border-radius: 12px;
 }
