--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -36,6 +36,7 @@
     background: none;
     border: none;
     padding: 6px;
+    width: fit-content;
     font-weight: bold;
     font-size: 12px;
     border-radius: 22px;
@@ -66,4 +67,15 @@ button.on {
 
 .hidden {
     color: aquamarine;
+}
+
+.frame button {
+    background: none;
+    border: none;
+}
+
+.descr {
+    width: 330px;
+    word-wrap: break-word;
+    text-align: left;
 }
