--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -6,7 +6,6 @@
     max-width: 75%;
     margin-left: 12.5%;
     margin-right: 12.5%;
-    text-align: center;
     align-items: center;
     height: 100%;
     display: flex;
@@ -15,19 +14,21 @@
 
 
 .tags {
-    background: none;
+
     border: none;
     padding: 7px;
     width: fit-content;
     font-weight: bold;
     font-size: 12px;
     border-radius: 22px;
-    background-color: rgb(77, 76, 76);
+    background-color: #6b5ad3;
     color: white;
+    box-shadow: rgba(0, 0, 0, 0.32) 0px 0.5px 4px;
+
 }
 
 .proj {
-    margin: auto;
+    justify-self: center;
     font-size: 72px;
     font-weight: bold;
 }
@@ -45,7 +46,8 @@
     padding: 8px;
     min-width: 3em;
     font-size: 20px;
-    margin-right: 2em;
+    margin-right: 1em;
+    margin-left: 1em;
     border-radius: 22px;
     font-weight: bold;
     overflow: hidden;
@@ -59,7 +61,7 @@
 }
 
 button.on {
-    color: #185ee0;
+    color: #6b5ad3;
     background-color: #f0f4fa;
 }
 
@@ -69,6 +71,8 @@ button.on {
     border-radius: 20px;
     margin-right: 2em;
     cursor: default;
+    font-weight: bold;
+    height: fit-content;
 }
 
 
@@ -98,15 +102,14 @@ button.on {
 
 
 .button-34 {
-    background: #3977eb;
+    background: #6b5ad3;
     border-radius: 12px;
-    box-shadow: #5E5DF0 0 5px 10px -5px;
+    box-shadow: #6b5ad3 0 5px 10px -5px;
     box-sizing: border-box;
     color: white;
     cursor: pointer;
     font-size: 16px;
     font-weight: 700;
-    line-height: 24px;
     opacity: 1;
     outline: 0 solid transparent;
     padding: 8px 18px;
@@ -116,4 +119,22 @@ button.on {
     word-break: break-word;
     border: 0;
     margin-right: auto;
+}
+
+
+.boas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.sum {
+    width: 28em;
+    word-break : break-all;
+    text-align: center;
+}
+
+.tit {
+    font-size: 26px;
 }
