--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,13 +1,11 @@
 .fix4 {
     width: 100%;
 }
-
 .selection2 {
-    max-width: 75%;
-    margin-left: 12.5%;
-    margin-right: 12.5%;
+    margin-left: 5%;
+    margin-right: 5%;
     align-items: center;
-    height: 100%;
+    height: 80vh;
 }
 
 .abt {
@@ -19,7 +17,6 @@
 }
 
 .pic {
-    align-items: center;
 }
 
 .oioi {
@@ -52,8 +49,45 @@
     width: fit-content;
     word-break: break-word;
     border: 0;
+    transition: transform .2s;
 }
 
 .cv:hover {
     background: #644df7;
+    transform: scale(1.04);
+}
+
+.pronto {
+    align-items: center;
+}
+.sheader {
+    border-bottom: 2px solid black;
+}
+
+.container {
+    font-weight: bold;
+}
+
+.skills {
+    text-align: center;
+}
+.container img {
+    border-radius: 50%;
+    background-color: rgba(235, 235, 235, 0.548);
+    box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.15), 0 6px 12px 0 rgba(0, 0, 0, 0.15);
+    transition: transform .2s;
+}
+
+.container img:hover {
+    transform: scale(1.08);
+}
+
+.jojo {
+    flex-direction: column;
+    align-items:  center;
+}
+
+.me {
+    box-shadow: #585858 0 5px 10px -5px;
+
 }
