--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -110,6 +110,11 @@ button.on {
 
 
 
+a.button-34, a.button-34:hover {
+    color: white;
+    text-decoration: none;
+}
+
 .button-34 {
     background: #6b5ad3;
     border-radius: 12px;
