--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -46,8 +46,8 @@
 .work {
     margin-top: 1em;
     background: none;
-    color: rgb(0, 191, 216);
-    border: 2px solid rgb(0, 202, 216);
+    color: rgb(148 92 255);
+    border: 2px solid rgb(132 68 255);
     padding: 8px;
     border-radius: 8px;
     overflow: hidden;
@@ -62,7 +62,7 @@
 .fix {
     width: 100%;
     height: 92%;
-    background: radial-gradient(98% 37.599999999999994% at 50% 105.5%,rgb(26, 107, 139) 0%,#111013 100%);
+    background: radial-gradient(98% 37.599999999999994% at 50% 105.5%,rgb(108 1 249 / 17%) 0%,#111013 100%);
 }
 
 .gif {
