--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -105,11 +105,15 @@ a.cv, a.cv:hover {
 
 .linha {
     display: flex;
+    width: 10%;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
   
 hr {
     width: 100%;
+    margin: 0;
+    border: none;
     border-top: 1px solid black;
-}
+  }
