--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,5 +1,6 @@
 .fix3 {
     width: 100%;
+    height: 100%;
     color: white;
     background: radial-gradient(108% 50.599999999999994% at 50% 0.5%,rgb(14 1 54 / 84%) 0%,#111013 100%);
 }
@@ -144,7 +145,7 @@ a.button-34, a.button-34:hover {
 
 .sum {
     width: 28em;
-    word-break : break-all;
+    word-break : word-wrap;
     text-align: center;
 }
 
