--- a/src/components/me/myself.css
+++ b/src/components/me/myself.css
@@ -7,7 +7,7 @@
 .selection2 {
     margin-left: 5%;
     margin-right: 5%;
-    align-items: center;
+    align-items: flex-start; 
     height: 100%;
 }
 
@@ -16,3 +16,20 @@
     align-items: center;
 }
 
+.oioi {
+    align-self: center;
+}
+
+.picture {
+    align-items: flex-start;
+    margin-left: 5%;
+}
+.picture img {
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;}
+
+.temp {
+    width: 100%;
+}
